fix: Red Border, text aligned to the left

--- a/src/pages/Login/Login.css
+++ b/src/pages/Login/Login.css
@@ -14,6 +14,8 @@
     line-height: 19px;
     color: #E04742;
     margin:0;
+    text-align: start;
+    padding: 8px 16px;
 }
 
 .login-container {
@@ -58,9 +60,14 @@
     color: rgba(0,0, 0);
 }
 
+
+.form-input:invalid {
+    border: 2px solid #E04742;
+}
+
     .showpass-btn {
         position: absolute;
-        bottom: 16px;
+        top: 48px;
         right: 16px;
         width: 32px;
         height: 32px;  
@@ -143,7 +150,7 @@
 
 
     .showpass-btn {
-        bottom: 12px;
+        top: 36px;
     }
 }
 
